fix: overflow enabled

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -83,7 +83,8 @@ html,
 body {
   max-width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
