--- a/src/components/styles/list.module.scss
+++ b/src/components/styles/list.module.scss
@@ -16,7 +16,7 @@
   position: absolute;
   justify-content: space-between;
   width: 100%;
-  height: calc(100% - 16px);
+  height: calc(100% - 80px);
   top: 0;
   bottom: 0;
   left: 0;
